# nfl-qb-sack-analysis

./: .gitignore  Makefile  README.md  __main__.py  nfl-qb-sack-downloader.ipynb  nfl-sack-streamlit.ipynb  processed_data.csv  pyproject.toml
core/: __init__.py  data.py  plots.py
raw_data/boxscores_prr/2020/: 202009100_kan.csv  202009130_atl.csv  202009130_buf.csv  202009130_min.csv  202009130_nor.csv  202009130_nwe.csv  202009130_rav.csv  202009130_was.csv  202009140_nyg.csv  202009200_clt.csv  202009200_crd.csv  202009200_gnb.csv  202009200_htx.csv  202009200_nyj.csv  202009200_phi.csv  202009200_tam.csv  202009210_rai.csv  202009240_jax.csv  202009270_cle.csv  202009270_clt.csv  202009270_den.csv  202009270_nwe.csv  202009270_nyg.csv  202009280_rav.csv  202010010_nyj.csv  202010040_car.csv  202010040_chi.csv  202010040_cin.csv  202010040_dal.csv  202010040_htx.csv  202010040_mia.csv  202010040_ram.csv  202010040_was.csv  202010050_gnb.csv  202010050_kan.csv  202010110_cle.csv  202010110_htx.csv  202010110_kan.csv  202010110_nyj.csv  202010110_pit.csv  (+103 more)
raw_data/boxscores_prr/2021/: 202109120_atl.csv  202109120_clt.csv  202109120_det.csv  202109120_htx.csv  202109120_nor.csv  202109120_nyg.csv  202109120_oti.csv  202109120_ram.csv  202109190_car.csv  202109190_cle.csv  202109190_jax.csv  202109190_mia.csv  202109190_nyj.csv  202109190_pit.csv  202109190_tam.csv  202109200_gnb.csv  202109230_htx.csv  202109260_buf.csv  202109260_cle.csv  202109260_den.csv  (+140 more)
raw_data/nfl_games/: games_2020.csv  games_2021.csv  games_2022.csv  games_2023.csv  games_2024.csv
(+419 files in other folders)
